use sphinx-build from miniconda env

--- a/build.gradle
+++ b/build.gradle
@@ -61,7 +61,7 @@ task doc {
         exec {
             workingDir 'docs/'
             executable "make"
-            args('doc')
+            args('doc', "SPHINXBUILD=${miniconda.buildEnvironmentDirectory}/bin/sphinx-build")
         }
     }
 }
