--- a/.gitignore
+++ b/.gitignore
@@ -79,6 +79,8 @@ instance/
 
 # Sphinx documentation
 docs/_build/
+docs/readme.rst    # auto generated from the main README.md with pandoc
+
 
 # PyBuilder
 target/
