--- a/gradle.properties
+++ b/gradle.properties
@@ -5,6 +5,9 @@
 # Version of Python and Miniconda, available values: 2 or 3
 versionOfPython = 2
 
+# version of python required (at least) to run your code
+requiredVersionOfPython = 2.7.6
+
 # runtime output dir (in addition of buildDir of gradle)
 targetDir = target/
 
